<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="@color/activity_background_color"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.olituc.designshot.LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#3F51B5"
        android:background="@mipmap/designshoticon_round"
        android:layout_margin="60dp"
        android:textStyle="italic"/>
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color"
        android:textStyle="bold"
        android:text="请登录您的摄计账号"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp"
            android:background="@drawable/userll_et_border">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/userlogin_et_corner">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@android:color/white"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:text="忘记密码？"
                    android:onClick="forgetPassword"/>
             </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/font_color"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:onClick="userLogin"
            android:background="@drawable/button_shape_corner"/>
        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="40dp"
            android:textColor="@color/font_color"
            android:text="@string/action_create_account"
            android:textStyle="bold"
            android:onClick="redirectToCreateAccount"
            android:background="@drawable/button_shape_corner"/>
        <Button
            android:id="@+id/return_to_main"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="40dp"
            android:textColor="@color/font_color"
            android:text="返回"
            android:textStyle="bold"
            android:onClick="finishTheActivity"
            android:background="@drawable/button_shape_corner"/>
    </LinearLayout>
</LinearLayout>
