<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.olituc.designshot.CreateAccountActivity"
    android:background="@color/activity_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="1dp"
        android:background="@drawable/userll_et_border">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/userlogin_et_corner">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="用户名"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/userlogin_et_corner">

            <EditText
                android:id="@+id/registerEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/userlogin_et_corner">

            <EditText
                android:id="@+id/registerPassWord"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="密码"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <EditText
                android:id="@+id/registerPassWordagain"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="确认密码"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/ensure_create"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/font_color"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:onClick="createAccount"
        android:background="@drawable/button_shape_corner"/>
    <Button
        android:id="@+id/cancel_create"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/font_color"
        android:text="返回"
        android:textStyle="bold"
        android:onClick="cancelCreateAccount"
        android:background="@drawable/button_shape_corner"/>

    <RadioButton
        android:id="@+id/cb_accept_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/accept_lawsAndPrivacy"
        android:autoLink="web"/>


</LinearLayout>
