<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:background="@drawable/userlogin_et_corner"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="bottom"
                android:text="@string/hot_location"
                android:textColor="@color/font_color"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/tv_more_hot_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:gravity="bottom|right"
                android:text="@string/more_hot_location"
                android:textColor="@color/font_color"
                android:textSize="12dp"/>
        </LinearLayout>

        <com.olituc.designshot.Utils.HorizontalListView
            android:id="@+id/hlv_search_hot_location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

        </com.olituc.designshot.Utils.HorizontalListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/userlogin_et_corner"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="bottom"
                android:text="@string/hot_plan"
                android:textColor="@color/font_color"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/tv_more_hot_plan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:gravity="bottom|right"
                android:text="@string/more_hot_location"
                android:textColor="@color/font_color"
                android:textSize="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20dp"
                android:src="@mipmap/designshoticon"/>

            <LinearLayout
                android:id="@+id/iv_search_hot_plan_pic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_search_hot_plan_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="2018.03.06"
                    android:textColor="@color/font_color"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tv_search_hot_plan_pos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="苏州"
                    android:textColor="@color/font_color"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tv_search_hot_plan_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="人像"
                    android:textColor="@color/font_color"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tv_search_hot_plan_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="古风，需要带相机和服装，和模特沟通好"
                    android:textColor="@color/font_color"
                    android:textSize="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/userlogin_et_corner"
            android:gravity="bottom"
            android:paddingLeft="20dp"
            android:text="@string/search_bottom_navigator"
            android:textColor="@color/font_color"
            android:textSize="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingLeft="20dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/bell"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/bell"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/bell"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/bell"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/bell"/>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
